# fscnet-pytorch

./: .gitignore  LICENSE  README.md  compare_time_attention.py  export_fscnet_onnx.py  export_to_onnx.py  generate_resampled_manifest.py  infer_fscnet.py  inference.py  justfile  main.py  pyproject.toml  requirements.txt  split_manifest.py  train.py  train_fscnet.py  training-tutorial.md
.github/workflows/: python-checks.yml
arXiv-2606.06962v1/: 00README.json  bare_jrnl.tex  ref.bib
fscnet_pytorch/: __init__.py  audio.py  checkpoint.py  cli.py  config.py  data.py  discriminator.py  kernels.py  losses.py  model.py  validation.py
tests/: test_discriminator.py  test_kernels.py  test_model_architecture.py
tools/: __init__.py  compare_time_attention.py  export_to_onnx.py  generate_resampled_manifest.py  measure_gmacs.py  split_manifest.py
