[project]
name = "fscnet-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxruntime-gpu[cuda]>=1.26.0",
    "onnxscript>=0.7.0",
    "ruff>=0.15.16",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "tqdm>=4.68.2",
]
