[project]
name = "fscnet-pytorch"
version = "0.1.0"
description = "FSC-Net: Integrating Fast Fourier Convolutions and Progressive Learning for Speech Bandwidth Extension."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fast-audio-resampler @ https://github.com/RustedBytes/fast-audio-resampler/releases/download/v0.3.0/fast_audio_resampler-0.3.0-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxruntime-gpu[cuda]>=1.26.0",
    "onnxscript>=0.7.0",
    "pesq>=0.0.4",
    "pydantic>=2.13.4",
    "pyptx>=0.1.1",
    "safetensors>=0.8.0",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "tqdm>=4.68.2",
    "trackio>=0.27.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.16",
    "types-tqdm>=4.68.0.20260608",
]

[tool.pyrefly]
project-includes = ["**/*.py"]
python-version = "3.14"
